# oximo

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: autodiff.yml  ci.yml  gams-sync.yml
crates/oximo/: Cargo.toml  README.md
crates/oximo-autodiff/: Cargo.toml  README.md
crates/oximo-autodiff/src/: enzyme.rs  error.rs  evaluator.rs  lib.rs  linearize.rs  slot.rs  sparsity.rs  tape.rs
crates/oximo-autodiff/tests/: derivatives.rs  sparsity.rs  tape.rs
crates/oximo-baron/: Cargo.toml  README.md
crates/oximo-baron/src/: lib.rs  options.rs  translate.rs
crates/oximo-clarabel/: Cargo.toml  README.md
crates/oximo-clarabel/src/: lib.rs  options.rs  persistent.rs  translate.rs
crates/oximo-core/: Cargo.toml  README.md
crates/oximo-core/src/: constraint.rs  display.rs  domain.rs  error.rs  indexed.rs  lib.rs  macro_support.rs  model.rs  param.rs  prelude.rs  set.rs  soc.rs  sum.rs  var.rs
crates/oximo-core/tests/: dense.rs  indexed_param.rs  macros.rs  model.rs  set.rs  soc.rs
crates/oximo-expr/: README.md
crates/oximo-expr/src/: arena.rs  classify.rs  eval.rs  handle.rs  lib.rs  linear.rs  ops.rs  quadratic.rs  render.rs  simplify.rs  visit.rs
crates/oximo-expr/tests/: arithmetic.rs
crates/oximo-gams/: README.md  build.rs
crates/oximo-gams/option-snapshots/: alphaecp.txt  antigone.txt  baron.txt  cbc.txt  conopt.txt  conopt3.txt  copt.txt  cplex.txt  decis.txt  dicopt.txt  gurobi.txt  highs.txt  ipopt.txt  knitro.txt  lindo.txt  minos.txt  mosek.txt  odhcplex.txt  sbb.txt  scip.txt  shot.txt  snopt.txt  soplex.txt  xpress.txt
crates/oximo-gams/src/: lib.rs  options.rs  solver_options.rs  translate.rs
crates/oximo-gurobi/: Cargo.toml  README.md
crates/oximo-gurobi/src/: lib.rs  nonlinear.rs  persistent.rs  translate.rs
crates/oximo-gurobi/tests/: nonlinear.rs  persistent.rs  soc.rs
crates/oximo-highs/: Cargo.toml  README.md
crates/oximo-highs/src/: lib.rs  options.rs  persistent.rs  translate.rs
crates/oximo-io/: Cargo.toml  README.md
crates/oximo-io/src/: error.rs  lib.rs  lp.rs  mps.rs
crates/oximo-io/src/nl/: analyze.rs  emit_expr.rs  header.rs  mod.rs  options.rs  permute.rs  segments.rs  sol.rs  writer.rs
crates/oximo-io/tests/: conic.rs  nl_options.rs  nl_snapshots.rs  nl_solver.rs  nonlinear_errors.rs  range.rs  semi_domains.rs
crates/oximo-macros/: Cargo.toml  README.md
crates/oximo-macros/src/: bind.rs  constraint.rs  index.rs  lib.rs  objective.rs  param.rs  set.rs  soc.rs  sum.rs  variable.rs
crates/oximo-pounce/: Cargo.toml  README.md
crates/oximo-pounce/src/: exact.rs  hybrid.rs  lib.rs  options.rs  persistent.rs  stable.rs  tnlp.rs  translate.rs  values.rs
crates/oximo-pounce/tests/: solve_pounce.rs
crates/oximo-solver/: Cargo.toml  README.md
crates/oximo-solver/src/: incremental.rs  infeasibility.rs  lib.rs  options.rs  persistent.rs  registry.rs  result.rs  solver.rs  status.rs
crates/oximo/examples/: baron_robot.rs  gradostat_multiperiod_socp.rs  lot_sizing.rs  parametric_pricing.rs  pounce_alkylation.rs  process_selection.rs  reaction_path.rs  transport.rs
crates/oximo/src/: lib.rs
crates/oximo/tests/: display.rs  solve.rs  solve_baron.rs  solve_clarabel.rs  solve_gams.rs  solve_gurobi.rs  solve_pounce.rs
snapshots/: baron.txt  gurobi.txt  highs.txt
