[workspace]
resolver = "2"
members = [
    "crates/oximo-expr",
    "crates/oximo-core",
    "crates/oximo-solver",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A Rust algebraic modeling library for solving optimization problems"
keywords = ["optimization", "math", "science"]
categories = ["mathematics", "science", "algorithms"]
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/germanheim/oximo"
authors = ["Germán Martín Heim <german.martin.heim@gmail.com>"]

[workspace.dependencies]
oximo-expr   = { path = "crates/oximo-expr",   version = "0.1.0" }
oximo-core   = { path = "crates/oximo-core",   version = "0.1.0" }
oximo-solver = { path = "crates/oximo-solver", version = "0.1.0" }

rayon        = "1.12"
smallvec     = "1.15"
smol_str     = "0.3.6"
rustc-hash   = "2.1"
ndarray      = "0.17"
thiserror    = "2.0"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
upper_case_acronyms = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
needless_lifetimes = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
items_after_statements = "allow"
return_self_not_must_use = "allow"
unnecessary_literal_bound = "allow"
elidable_lifetime_names = "allow"
missing_fields_in_debug = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
