[workspace]
resolver = "3"
members = [
    "crates/oximo-expr",
    "crates/oximo-macros",
    "crates/oximo-core",
    "crates/oximo-solver",
    "crates/oximo-highs",
    "crates/oximo-io",
    "crates/oximo-gurobi",
    "crates/oximo-gams",
    "crates/oximo-baron",
    "crates/oximo-clarabel",
    "crates/oximo",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
description = "A Rust algebraic modeling library for solving optimization problems"
readme = "README.md"
keywords = ["optimization", "math", "science"]
categories = ["mathematics", "science", "algorithms"]
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oximo-rs/oximo"
authors = ["Germán Martín Heim <german.martin.heim@gmail.com>"]

[workspace.dependencies]
oximo-expr   = { path = "crates/oximo-expr",   version = "0.4.0" }
oximo-macros = { path = "crates/oximo-macros", version = "0.4.0" }
oximo-core   = { path = "crates/oximo-core",   version = "0.4.0" }
oximo-solver = { path = "crates/oximo-solver", version = "0.4.0" }
oximo-highs  = { path = "crates/oximo-highs",  version = "0.4.0" }
oximo-io     = { path = "crates/oximo-io",     version = "0.4.0" }
oximo-gurobi = { path = "crates/oximo-gurobi", version = "0.4.0" }
oximo-gams   = { path = "crates/oximo-gams",   version = "0.4.0" }
oximo-baron  = { path = "crates/oximo-baron",  version = "0.4.0" }
oximo-clarabel = { path = "crates/oximo-clarabel", version = "0.4.0" }

rayon            = "1.12"
syn              = { version = "2", features = ["full"] }
quote            = "1"
proc-macro2      = "1"
proc-macro-crate = "3"
smallvec         = "1.15"
smol_str         = "0.3.6"
rustc-hash       = "2.1"
ndarray          = "0.17"
thiserror        = "2.0"
num-traits       = "0.2"
highs            = "2.3"
grb              = "3.0"    
clarabel         = "0.11"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
upper_case_acronyms = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
needless_lifetimes = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
items_after_statements = "allow"
return_self_not_must_use = "allow"
unnecessary_literal_bound = "allow"
elidable_lifetime_names = "allow"
missing_fields_in_debug = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
