[package]
name = "oximo-gurobi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Gurobi backend for oximo"
readme = "README.md"

[dependencies]
oximo-expr.workspace = true
oximo-core.workspace = true
oximo-solver.workspace = true
grb = { workspace = true, features = ["gurobi12"] }
rayon.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true

[lints]
workspace = true
