[package]
name = "oximo-highs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HiGHS LP/MILP/QP backend for oximo"
readme = "README.md"

[dependencies]
oximo-expr.workspace = true
oximo-core.workspace = true
oximo-solver.workspace = true
highs.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true

[lints]
workspace = true
