[package]
name = "oximo-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Model I/O (MPS writer, LP writer) for oximo"

[dependencies]
oximo-expr.workspace = true
oximo-core.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true

[lints]
workspace = true
