[package]
name = "oximo-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Model I/O (MPS, LP, NLP writers) for oximo"
readme = "README.md"

[dependencies]
oximo-expr.workspace = true
oximo-core.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
