[package]
name = "oximo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[features]
default = ["highs", "io"]
highs = ["dep:oximo-highs"]
io = ["dep:oximo-io"]
gurobi = ["dep:oximo-gurobi"]
gams = ["dep:oximo-gams"]
baron = ["dep:oximo-baron"]
clarabel = ["dep:oximo-clarabel"]
clarabel-faer = ["clarabel", "oximo-clarabel/faer"]
pounce = ["dep:oximo-pounce"]
pounce-enzyme = ["pounce", "oximo-pounce/enzyme"]

[package.metadata.docs.rs]
features = ["gams", "baron", "clarabel", "clarabel-faer"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
oximo-expr.workspace = true
oximo-core.workspace = true
oximo-solver.workspace = true
oximo-highs = { workspace = true, optional = true }
oximo-gurobi = { workspace = true, optional = true }
oximo-gams = { workspace = true, optional = true }
oximo-baron = { workspace = true, optional = true }
oximo-clarabel = { workspace = true, optional = true }
oximo-pounce = { workspace = true, optional = true }
oximo-io = { workspace = true, optional = true }

[lints]
workspace = true
